refactor so that junit test can run